--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html> 
 <head> 
-<title>Ñòèõè îò Àííû Âîðîíîâîé</title> 
+<title>Стихи от Анны</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"> <body background="https://forum.ivd.ru/uploads/monthly_01_2013/post-82075-0-43823000-1359461998.jpg">
 <div align="center"> 
-<font size="+6"><h3>Ñòèõè îò Àííû Âîðîíîâîé</h3></font>
+<font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
 </div> 
 <font color="#000000"><font size="+3">
 </font> 
