--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body text="#000000"bgcolor"#FF0000"> <body background="https://forum.ivd.ru/uploads/monthly_01_2013/post-82075-0-43823000-1359461998.jpg">
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
+ <font size="+6"><h5>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</h5></font>
 </div> 
 <font color="#000000"><font size="+3">
 </font> 
