--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
  <font size="+6"><h5>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</h5></font>
-</div> 
+</div> google-site-verification: google1c2e002881248a44.html
 <font color="#000000"><font size="+3">
 </font> 
 </body>
