Update and rename google-site-verification: google1c2e002881248a44.index.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html> 
-<head> 
+<head> <meta name="google-site-verification" content="qRqo-4Uv6zdp1Dl5wFmTAQb-BlqotZvcq0l7VUGD02Y" />
 <title>Стихи от Анны</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"> <body background="https://forum.ivd.ru/uploads/monthly_01_2013/post-82075-0-43823000-1359461998.jpg">
