--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="google-site-verification" content="qRqo-4Uv6zdp1Dl5wFmTAQb-BlqotZvcq0l7VUGD02Y" />
 <title>Стихи от Анны</title> 
 </head> 
-<body text="#000000"bgcolor"#FF0000"> <body background="https://forum.ivd.ru/uploads/monthly_01_2013/post-82075-0-43823000-1359461998.jpg"><img src="https://vk.com/im?sel=232003827&z=photo232003827_456239044%2Fmail161474">
+<body text="#000000"bgcolor"#FF0000"> <body background="https://forum.ivd.ru/uploads/monthly_01_2013/post-82075-0-43823000-1359461998.jpg"><img src="https://vk.com/voronova03?z=photo232003827_456239041%2Falbum232003827_0%2Frev">
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
  <font size="+6"><h5>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</h5></font>
