--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Стихи от Анны</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"> <body background="https://www.motto.net.ua/pic/201209/1920x1080/motto.net.ua-21737.jpg">
+ <img src="http://www.kartinkijane.ru/pic/201304/2560x1440/kartinkijane.ru-2438.jpg">
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
  <font size="+6"><h5>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</h5></font>
