--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html> 
 <head> <meta name="google-site-verification" content="qRqo-4Uv6zdp1Dl5wFmTAQb-BlqotZvcq0l7VUGD02Y" />
-<title>Стихи от Анны</title> 
+<title>Стихи от Анны Гнатвар</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"> <body background="https://www.motto.net.ua/pic/201209/1920x1080/motto.net.ua-21737.jpg">
- <img src="https://pp.userapi.com/c841425/v841425870/4ecb8/O3aKjGzNs5A.jpg">
+ <img src="">
 <div align="center"> 
-<font size="+6"><h3>Стихи от Анны Вороновой</h3></font>
+<font size="+6"><h3>Стихи от Анны Гнатвар</h3></font>
  <font size="+6"><h5>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</h5></font>
 </div> 
 <font color="#000000"><font size="+3">
