--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html> 
-<head> <meta name="google-site-verification" content="qRqo-4Uv6zdp1Dl5wFmTAQb-BlqotZvcq0l7VUGD02Y" />
+<head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"> <body background="https://www.motto.net.ua/pic/201209/1920x1080/motto.net.ua-21737.jpg">
