--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
-<body text="#000000"bgcolor"#FF0000"> <body background="https://www.motto.net.ua/pic/201209/1920x1080/motto.net.ua-21737.jpg">
+<body text="#000000"bgcolor"#FF0000"> <body background="http://st.depositphotos.com/1050267/3809/i/950/depositphotos_38093915-Repeatable-rose-petals.jpg">
  <img src="">
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font>
