--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
-<body text="#000000"> <body background="https://previews.123rf.com/images/kzenia/kzenia1110/kzenia111000004/10765528-White-rose-petals-texture-Stock-Photo.jpg">
+<body text="#000000"> <body background="http://media.istockphoto.com/vectors/pink-sakura-petals-background-vector-id513379272">
 <div align="center"> 
 <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font>
- <font size="+6"><i>Спросила я у яндекса fsa<br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
+ <font size="+6"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
 </div> 
 <font color="#000000"><font size="+3">
 </font> 
