--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 </head> 
 <body text="#000000"> <body background="http://media.istockphoto.com/vectors/pink-sakura-petals-background-vector-id513379272">
 <div align="center"> 
-<font size="+6"><h3>Стихи от Анны Гнатвар</h3></font>
- <font size="+6"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
-</div> 
+ <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font></div>
+<font size="+3"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
 <font color="#000000"><font size="+3">
 </font> 
 </body>
