--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
-<body text="#000000"> <body background="http://media.istockphoto.com/vectors/pink-sakura-petals-background-vector-id513379272">
+<body text="#000000"> <body background="https://www.wmj.ru/imgs/2016/12/04/19/730071/ef31e12f69d3c633c86cb05cc8417b681a574728.jpg">
 <div align="center"> 
  <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font></div>
 <font size="+3"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
