--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
-<body text="#000000"> <body background="https://www.wmj.ru/imgs/2016/12/04/19/730071/ef31e12f69d3c633c86cb05cc8417b681a574728.jpg">
+<body text="#000000"bgcolor"#FF0000">
 <div align="center"> 
  <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font></div>
  <h1>Спросила я у Яндекса<br><br></h1>
