--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Гнатвар</title> 
 </head> 
-<body text="#000000"bgcolor"#FF0000"><img scr="https://w-dog.ru/wallpapers/11/18/443734993463506/cvety-makro-xoroshee-kachestvo-krasota.jpg">
+<body text="#000000"bgcolor"#FF0000"><img src="https://pp.userapi.com/c841522/v841522530/51cc4/W2cTK0-YhO4.jpg">
 <div align="center"> 
  <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font></div>
  <h1>Спросила я у Яндекса<br><br></h1>
