--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html> 
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
-<title>Стихи от Анны Гнатвар</title> 
+<title>Стихи от Анны Вороновой</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"><img src="https://pp.userapi.com/c841522/v841522530/51cc4/W2cTK0-YhO4.jpg" width="1410"height="500">
 <div align="center"> 
- <font size="+6"><h3>Стихи от Анны Гнатвар</h3></font></div>
- <h1>Спросила я у Яндекса<br><br></h1>
+<h1>Спросила я у Яндекса<br><br></h1>
 <font size="+3"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
 <font color="#000000"><font size="+3">
 </font> 
