--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Вороновой</title> 
 </head> 
-<body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg" width="1410"></div>
+<body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
 <h1>Спросила я у Яндекса<br><br></h1>
 <font size="+3"><i>Спросила я у яндекса <br> Где же лето красное?<br> яндекс не ответил мне<br> как-будто он глухой<br>.<br>Спросила я у рамблера<br>Погода где прекрасная<br>Рамблер забросал меня<br>Рекламной чепухой<br>Гугл ответил преданною<br>Гугл ответил искренне.<br>Спроси гилромедцентр<br>Он никогда не врет</i></font>
 <font color="#000000"><font size="+3">
