--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Стихи от Анны Вороновой</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
-<div align="left"> <a href="ratro11.github.io/index.html1">Спросила я у Яндекса</a></div> 
+<div align="left"> <a href="ratro11.github.io/sprosilla/index.html">Спросила я у Яндекса</a></div> 
 <font color="#000000"><font size="+3">
 </font> 
 </body>
