--- a/sprosilla/index.html
+++ b/sprosilla/index.html
@@ -4,7 +4,7 @@
 </head> 
 <body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
 <div align="left"> <a href="ratro11.github.io/index.html"><h1>Домашняя страница<h1></a></div> 
-<font size="+3">спросила я у яндеукса тмотм</font>
+<font size="+3"></font>
 <font color="#000000"><font size="+3">
 </font> 
 </body>
