--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <title>Стихи от Анны Вороновой</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
-<div align="left"> <a href="ratro11.github.io/sprosilla/index.html"><h1>Спросила я у Яндекса<h1></a></div> 
+<div align="left"><a href="ratro11.github.io/sprosila/index.html"><h1>Спросила я у Яндекса</a>
+<a href="ratro11.github.io/2/index.html">Внутренняя тетка(девушкам и женщинам посвящается)</a>
+<a href="ratro11.github.io/3/index.html">Буду мужа удивлять</a>  
+ <a href="ratro11.github.io/4/index.html">Сфоткай меня красиво!</a> 
+ <a href="ratro11.github.io/5/index.html">Сэлфи-фотки</a> 
+ <a href="ratro11.github.io/6/index.html">Эндорфины</a> 
+<a href="ratro11.github.io/7/index.html">Корпоративчик на работе</a>  
+<a href="ratro11.github.io/8/index.html">Салатик</a>  
+ <a href="ratro11.github.io/9/index.html">Не идеальная мама</a> 
+ <a href="ratro11.github.io/10/index.html">Ода рабочим мужикам</a> 
+  <h1>
+</div> 
 <font color="#000000"><font size="+3">
 </font> 
 </body>
