--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Стихи от Анны Вороновой</title> 
 </head> 
 <body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
-<div align="left"><a href="ratro11.github.io/sprosila/index.html"><h1>Спросила я у Яндекса</a><br>
+<div align="left"><a href="ratro11.github.io/sprosilla/index.html"><h1>Спросила я у Яндекса</a><br>
 <a href="ratro11.github.io/2/index.html">Внутренняя тетка(девушкам и женщинам посвящается)</a><br>
 <a href="ratro11.github.io/3/index.html">Буду мужа удивлять</a>  <br>
  <a href="ratro11.github.io/4/index.html">Сфоткай меня красиво!</a> <br>
