--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <meta name="yandex-verification" content="6de0f61869d276f4" />
 <title>Стихи от Анны Вороновой</title> 
 </head> 
-<body text="#000000"bgcolor"#FF0000"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
+<body text="#000000"bgcolor"#FF0000"><body background="https://t3.ftcdn.net/jpg/01/77/28/26/240_F_177282632_Z9cOAKCM8EVV5C0WKQjLarca79J812KR.jpg"><div align="center"><img src="https://pp.userapi.com/c841633/v841633045/55fd9/DXCt1NxP2qw.jpg"></div>
 <div align="left"><a href="ratro11.github.io/sprosilla/index.html"><h1>Спросила я у Яндекса</a><br>
 <a href="ratro11.github.io/2/index.html">Внутренняя тетка(девушкам и женщинам посвящается)</a><br>
 <a href="ratro11.github.io/3/index.html">Буду мужа удивлять</a>  <br>
