--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head> 
  <style>
     body{
-         background: url(http://clipart-db.ru/file_content/rastr/background_060.jpg) no-repeat;
+         background: url(http://www.1366x768.net/large/201111/1535.jpg) no-repeat;
          -moz-background-size: 100%
          -webkit-background-size: 100%
          -o-background-size: 100%
