--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head> 
  <style>
     body{
-         background: url(http://www.1366x768.net/large/201111/1535.jpg) no-repeat;
+         background: url(http://oboi-na-stol.com/pub/original_images/oboi-na-stol.com-148882-tekstury-tekstury-tekstura-fon-seryy-zhyoltyy-goluboy-fonovye-kartinki.jpg) no-repeat;
          -moz-background-size: 100%
          -webkit-background-size: 100%
          -o-background-size: 100%
