--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head> 
  <style>
     body{
-         background: url(https://oboi.ws/wallpapers/17_8435_oboi_bezhevaja_stena_1920x1080.jpg) no-repeat;
+         background: url(https://childlibrary.files.wordpress.com/2014/01/1283882679_c2e8edf2e0e6edfbe920f4eeed203836203836.jpg) no-repeat;
          -moz-background-size: 100%
          -webkit-background-size: 100%
          -o-background-size: 100%
