--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head> 
  <style>
     body{
-         background: url(https://childlibrary.files.wordpress.com/2014/01/1283882679_c2e8edf2e0e6edfbe920f4eeed203836203836.jpg) no-repeat;
+         background: url(http://img1.liveinternet.ru/images/attach/c/9/108/150/108150299_1_60.png) no-repeat;
          -moz-background-size: 100%
          -webkit-background-size: 100%
          -o-background-size: 100%
