--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head> 
  <style>
     body{
-         background: url(http://img1.liveinternet.ru/images/attach/c/9/108/150/108150299_1_60.png) no-repeat;
+         background: url(http://www.fonstola.ru/pic/201210/1920x1080/fonstola.ru-82763.jpg) no-repeat;
          -moz-background-size: 100%
          -webkit-background-size: 100%
          -o-background-size: 100%
